@@ -56,7 +56,7 @@ import io.sloeber.core.tools.Version;
 public class InternalPackageManager extends PackageManager {
 
 	private static final String  FILE = Messages.FILE;
-	private static final String FOLDER = Messages.FOLDER;;
+	private static final String FOLDER = Messages.FOLDER;
 	private static boolean myIsReady = false;
 
 	public static boolean isReady() {
@@ -475,7 +475,7 @@ public class InternalPackageManager extends PackageManager {
 			boolean isSymLink = false;
 			String linkName = null;
 			Integer mode = null;
-			Long modifiedTime = new Long(entry.getLastModifiedDate().getTime());
+			Long modifiedTime = Long.valueOf(entry.getLastModifiedDate().getTime());
 
 			pMonitor.subTask("Processing " + name); //$NON-NLS-1$
 
@@ -502,7 +502,7 @@ public class InternalPackageManager extends PackageManager {
 
 			if (entry instanceof TarArchiveEntry) {
 				TarArchiveEntry tarEntry = (TarArchiveEntry) entry;
-				mode = new Integer(tarEntry.getMode());
+				mode = Integer.valueOf(tarEntry.getMode());
 				isLink = tarEntry.isLink();
 				isSymLink = tarEntry.isSymbolicLink();
 				linkName = tarEntry.getLinkName();
